--- a/versio1/index.html
+++ b/versio1/index.html
@@ -11,14 +11,14 @@
         <h1>Kaverilista</h1>
     </header>
     <main id="main">
-        <h3>Lisää kymmenen kaveria</h3>
+        <h2>Lisää kymmenen nimeä</h2>
         <form name="newName">
             <input type="text">
-            <input type="submit" value="Lisää kaveri">
+            <input type="submit" value="Lisää">
         </form>
         <ol id="friendList" class="friend-list">
         </ol>
     </main>
-    <script scr="kaverilista.js"></script>
+    <script src="kaverilista.js"></script>
 </body>
 </html>
