--- a/versio2/index.html
+++ b/versio2/index.html
@@ -14,12 +14,12 @@
         <form name="nameForm">
             <p>Syötä nimi:</p>
             <input type="text">
-            <input type="submit" name="addButton" value="Lisää kaveri">
-            <input type="submit" name="deleteButton" value="Poista kaveri">
-            <input type="submit" name="sortButton" value="Järjestä kaverit">
-            <ul id="friendList" class="friend-list">
-            </ul>
+            <input type="submit" class="addButton" value="Lisää kaveri">
+            <input type="submit" class="deleteButton" value="Poista kaveri">
+            <input type="submit" class="sortButton" value="Järjestä kaverit">
         </form>
+        <ul id="friendList" class="friend-list">
+        </ul>
     </main>
     <script src="kaverilista.js"></script>
 </body>
