--- a/versio1/index.html
+++ b/versio1/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaverilista</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Kaverilista</h1>
     </header>
     <main id="main">
-        <h2>Lisää kymmenen nimeä</h2>
         <form name="newName">
+            <p>Lisää kymmenen nimeä:</p>
             <input type="text">
             <input type="submit" value="Lisää">
         </form>
